samples/_failures_safe/1761529855_f9cb44_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a81ab4c5.c: In function ‘main’:
./samples/SAFE/__tmp_a81ab4c5.c:138:14: error: ‘end’ undeclared (first use in this function)
  138 |         if (*end
      |              ^~~
./samples/SAFE/__tmp_a81ab4c5.c:138:14: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_a81ab4c5.c:138:17: error: expected ‘)’ at end of input
  138 |         if (*end
      |            ~    ^
      |                 )
./samples/SAFE/__tmp_a81ab4c5.c:138:9: error: expected declaration or statement at end of input
  138 |         if (*end
      |         ^~
./samples/SAFE/__tmp_a81ab4c5.c:138:9: error: expected declaration or statement at end of input
